--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@moxy/next-layout": "^2.2.3",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
+    "firebase": "^9.9.3",
     "framer-motion": "^6.2.8",
+    "js-cookie": "^3.0.1",
     "next": "12.1.0",
     "next-seo": "^5.1.0",
     "react": "17.0.2",
