--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "firebase": "^9.9.3",
+    "formik": "^2.2.9",
     "framer-motion": "^6.2.8",
     "js-cookie": "^3.0.1",
     "next": "12.1.0",
@@ -24,7 +25,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-scrollbars-custom": "^4.0.27",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.10.0",
